<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_background"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="serif"
        android:text="@string/home_page"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07999998" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_acc_from_home"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="280dp"
        android:background="@drawable/button_background"
        android:drawableStart="@drawable/icon_accounts"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/accounts"
        android:textAlignment="inherit"
        android:textColor="#1f2cd0"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_res_from_home"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_res_from_home"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_res_from_home"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_background"
        android:drawableStart="@drawable/icon_reservations"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/reservations"
        android:textAlignment="inherit"
        android:textColor="#1f2cd0"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>